{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 20,
  "lineage": "beb212b8-5623-91e5-9b86-10976773af1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:661437291867:instance/i-054beddbd02eb2d31",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054beddbd02eb2d31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tcc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d465424d1eb3196",
            "private_dns": "ip-10-0-1-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-23-22-149-179.compute-1.amazonaws.com",
            "public_ip": "23.22.149.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09974e4ec7daf9fc7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6163ae2719da307",
            "tags": {
              "Name": "grafana-project"
            },
            "tags_all": {
              "Name": "grafana-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5d8ffe242c04db2"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.grafana-project_sg",
            "aws_subnet.tcc-pub-1",
            "aws_vpc.tcc-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sensor1-client-temperatura-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:661437291867:instance/i-0503b6139bfaf238c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0503b6139bfaf238c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tcc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048d5693c8c84ec81",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-18-215-182-209.compute-1.amazonaws.com",
            "public_ip": "18.215.182.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2c472faff2e7587",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6163ae2719da307",
            "tags": {
              "Name": "sensor1-client-temperatura-project"
            },
            "tags_all": {
              "Name": "sensor1-client-temperatura-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e224836dceede611"
            ]
          },
          "dependencies": [
            "aws_instance.grafana-project",
            "aws_key_pair.key_pair",
            "aws_security_group.grafana-project_sg",
            "aws_security_group.sensor-client-temperatura-project_sg",
            "aws_subnet.tcc-pub-1",
            "aws_vpc.tcc-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-mosquitto-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:661437291867:instance/i-07266f56a3544fd34",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07266f56a3544fd34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tcc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b139652c6ff2420",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-3-93-163-44.compute-1.amazonaws.com",
            "public_ip": "3.93.163.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cb0a025166e13ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6163ae2719da307",
            "tags": {
              "Name": "server-mosquitto-project"
            },
            "tags_all": {
              "Name": "server-mosquitto-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04266bc6393a1f10b"
            ]
          },
          "dependencies": [
            "aws_instance.grafana-project",
            "aws_key_pair.key_pair",
            "aws_security_group.grafana-project_sg",
            "aws_security_group.mosquitto-project_sg",
            "aws_subnet.tcc-pub-1",
            "aws_vpc.tcc-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tcc-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:internet-gateway/igw-0d64cbbc1b76ea82c",
            "id": "igw-0d64cbbc1b76ea82c",
            "owner_id": "661437291867",
            "tags": {
              "Name": "tcc-IGW"
            },
            "tags_all": {
              "Name": "tcc-IGW"
            },
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "dependencies": [
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tcc-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:route-table/rtb-0e805fd87efc7cc12",
            "id": "rtb-0e805fd87efc7cc12",
            "owner_id": "661437291867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d64cbbc1b76ea82c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tcc-pub-RT"
            },
            "tags_all": {
              "Name": "tcc-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tcc-IGW",
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tcc-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e0f0971f4b7a0a1",
            "route_table_id": "rtb-0e805fd87efc7cc12",
            "subnet_id": "subnet-0a6163ae2719da307"
          },
          "dependencies": [
            "aws_internet_gateway.tcc-IGW",
            "aws_route_table.tcc-pub-RT",
            "aws_subnet.tcc-pub-1",
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible-project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:security-group/sg-020cc68e6a6432379",
            "description": "ansible-project_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020cc68e6a6432379",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-project_sg",
            "name_prefix": "",
            "owner_id": "661437291867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-project_sg"
            },
            "tags_all": {
              "Name": "ansible-project_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:security-group/sg-0d5d8ffe242c04db2",
            "description": "grafana-project_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5d8ffe242c04db2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana Anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus Anywhere",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grafana-project_sg",
            "name_prefix": "",
            "owner_id": "661437291867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grafana-project_sg"
            },
            "tags_all": {
              "Name": "grafana-project_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mosquitto-project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:security-group/sg-04266bc6393a1f10b",
            "description": "mosquitto-project_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04266bc6393a1f10b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MQTT Anywhere",
                "from_port": 1883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1883
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "23.22.149.179/32"
                ],
                "description": "Prometheus port",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "mosquitto-project_sg",
            "name_prefix": "",
            "owner_id": "661437291867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mosquitto-project_sg"
            },
            "tags_all": {
              "Name": "mosquitto-project_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.grafana-project",
            "aws_key_pair.key_pair",
            "aws_security_group.grafana-project_sg",
            "aws_subnet.tcc-pub-1",
            "aws_vpc.tcc-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-db-mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:security-group/sg-0559008cea937c502",
            "description": "rds-db-mysql_sg",
            "egress": [],
            "id": "sg-0559008cea937c502",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-db-mysql_sg",
            "name_prefix": "",
            "owner_id": "661437291867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-db-mysql_sg"
            },
            "tags_all": {
              "Name": "rds-db-mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sensor-client-temperatura-project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:security-group/sg-0e224836dceede611",
            "description": "sensor-client-temperatura-project_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e224836dceede611",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MQTT Anywhere",
                "from_port": 1883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1883
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "23.22.149.179/32"
                ],
                "description": "Prometheus port",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "sensor-client-temperatura-project_sg",
            "name_prefix": "",
            "owner_id": "661437291867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sensor-client-temperatura-project_sg"
            },
            "tags_all": {
              "Name": "sensor-client-temperatura-project_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.grafana-project",
            "aws_key_pair.key_pair",
            "aws_security_group.grafana-project_sg",
            "aws_subnet.tcc-pub-1",
            "aws_vpc.tcc-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcc-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:subnet/subnet-0a6163ae2719da307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6163ae2719da307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "661437291867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcc-pub-1"
            },
            "tags_all": {
              "Name": "tcc-pub-1"
            },
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "dependencies": [
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcc-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:subnet/subnet-00a3732144fce580d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a3732144fce580d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "661437291867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcc-pub-1"
            },
            "tags_all": {
              "Name": "tcc-pub-1"
            },
            "vpc_id": "vpc-03dcc3d8bb40a9c9e"
          },
          "dependencies": [
            "aws_vpc.tcc-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tcc-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661437291867:vpc/vpc-03dcc3d8bb40a9c9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03cf24b8e137e2500",
            "default_route_table_id": "rtb-0686e9fbfd9ce85c5",
            "default_security_group_id": "sg-0b602b087af504fd3",
            "dhcp_options_id": "dopt-00b1aa893530eafab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03dcc3d8bb40a9c9e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0686e9fbfd9ce85c5",
            "owner_id": "661437291867",
            "tags": {
              "Name": "tcc-VPC"
            },
            "tags_all": {
              "Name": "tcc-VPC"
            }
          }
        }
      ]
    }
  ]
}